default/objects/Encompass_Loan_Controls__mdt/Encompass_Loan_Controls__mdt.object-meta.xml
<CustomObject>
    <label>Encompass Loan Controls</label>
    <pluralLabel>Encompass Loan Controls</pluralLabel>
</CustomObject>