default/objects/Encompass_Loan_Controls__mdt/fields/Internal_Email_Domains__c.field-meta.xml
<CustomField>
    <fullName>Internal_Email_Domains__c</fullName>
    <inlineHelpText>Enter one or more domains separated by commas (for example, &apos;google.com,example.com&apos;)</inlineHelpText>
    <label>Internal Email Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>