default/objects/Encompass_Loan_Controls__mdt/fields/Template_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Template_Base_URL__c</fullName>
    <label>Template Base URL</label>
    <type>TextArea</type>
</CustomField>