default/objects/Encompass_Loan_Controls__mdt/fields/Template_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Template_Name_Field__c</fullName>
    <label>Template Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>