default/objects/Encompass_Loan_Controls__mdt/fields/Using_Template_Folders__c.field-meta.xml
<CustomField>
    <fullName>Using_Template_Folders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using Template Folders</label>
    <type>Checkbox</type>
</CustomField>